@startuml TechStoreObserverPattern

skinparam class {
    BackgroundColor<<Interface>> LightBlue
    BackgroundColor<<Subject>> LightGreen
    BackgroundColor<<Observer>> LightYellow
}

interface Subject <<Interface>> {
    + registerObserver(Observer)
    + removeObserver(Observer)
    + notifyObservers(String)
}

interface Observer <<Interface>> {
    + update(String)
}

class NotificationService <<Subject>> {
    - observers: List<Observer>
    + registerObserver(Observer)
    + removeObserver(Observer)
    + notifyObservers(String)
}

class AdminNotifier <<Observer>> {
    - adminName: String
    + update(String)
}

Subject <|.. NotificationService
Observer <|.. AdminNotifier

NotificationService *--> Observer : notifies

note top of Subject
  <<interface>>
  Defines the contract for\nobservable objects
end note

note right of Observer
  <<interface>>
  Defines the update method\nfor all observers
end note

note bottom of NotificationService
  <<Concrete Subject>>
  • Maintains list of observers
  • Prevents duplicate registration
  • Broadcasts notifications
end note

note left of AdminNotifier
  <<Concrete Observer>>
  • Personalized notifications
  • Can be extended for different\n  notification channels (email, SMS)
end note

@enduml